fix:  prevent nav switcher from covering content

--- a/src/partials/is-pc/_vault-switcher.scss
+++ b/src/partials/is-pc/_vault-switcher.scss
@@ -32,9 +32,6 @@
 
   // to prevent nav switcher from covering content
   .nav-files-container {
-    padding-bottom: 50px !important;
-    background-color: red !important;
+    padding-bottom: 50px;
   }
-
-
 }
